--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_ComboBoxPartialPais.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_ComboBoxPartialPais.cshtml
@@ -1,9 +1,9 @@
 ﻿@using MVC.Presentacion.Models.Catalogos
 @model List<ClienteLocacionMod>
 @Html.DevExpress().ComboBox(settings =>
-{  
+{
     settings.Name = "IdPais";
-    settings.Width = 180;
+    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
     settings.SelectedIndex = 0;
     settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
     settings.Properties.DropDownStyle = DropDownStyle.DropDown;
