--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarCliente.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarCliente.cshtml
@@ -252,103 +252,71 @@
                     </div>
                 </div>
                 <div class="row clearfix">
-                    <div class="col-lg-12 col-md-12 col-sm-12">
-                        <div class="card">
-                            <div class="header">
-                                <h2><strong>Condición del crédito y descuento</strong></h2>
+                    <div class="card">
+                        <div class="header">
+                            <h2><strong>Condición del crédito y descuento</strong></h2>
+                        </div>
+                        <div class="body">
+                            <div class="row clearfix">
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        Límite de crédito:
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        Kilos de Credito<input name="limiteCreditoMonto" class="form-control" type="number" />
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <div>
+                                            Días para pagar
+                                            <input name="limiteCreditoDias" class="form-control" type="number" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <div>
+                                            Credito disponible:
+                                            <input name="CreditoDisponibleMonto" class="form-control" type="number" />
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="body">
-                                <div class="row clearfix">
-                                    <div class="col-lg-2 col-md-2 col-sm-2" style="max-width:12.666667%">
-                                        <div class="form-group">
-                                            Límite de crédito:
+                            <div class="row clearfix">
+                                <div class="col-md-3" style="max-width:15.666667%">
+                                    <div class="form-group">
+                                        <div>
+                                            Descuento:
+                                            <input name="DescuentoXKilo" class="form-control" type="number" />
                                         </div>
                                     </div>
-                                    <div class="col-lg-2 col-md-2 col-sm-2" style="max-width:15.666667%">
-                                        <div class="form-group">
-                                            Monto $ <input name="limiteCreditoMonto" class="form-control" type="number" />
-                                        </div>
+                                </div>
+
+                                <div class="col-md-2">
+                                    ¿Es Precio fijo?
+                                    <div class="form-group">
+                                        <label class="switch">
+                                            @Html.CheckBoxFor(m => m.EsFijo, new { @class = "form-control" })
+                                            <span class="slider round"></span>
+                                        </label>
                                     </div>
-                                    <div class="col-lg-2 col-md-2 col-sm-2" style="max-width:15.666667%">
-                                        <div class="form-group">
-                                            <div>
-                                                Días <input name="limiteCreditoDias" class="form-control" type="number" />
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-2 col-md-2 col-sm-2" style="max-width:15.666667%">
-                                        <div class="form-group">
-                                            <div>
-                                                Credito disponible:
-                                                <input name="DescuentoXKilo" class="form-control" type="number" />
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-2 col-md-2 col-sm-2" style="max-width:15.666667%">
-                                        <div class="form-group">
-                                            <div>
-                                                Descuento %:
-                                                <input name="DescuentoXKilo" class="form-control" type="number" />
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-2 col-md-2 col-sm-2" style="max-width:15.666667%">
-                                        <div class="form-group">
-                                            <div>
-                                                Autorizar ventas con límite de crédito excedido
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-1 col-md-1 col-sm-1">
-                                        <div class="form-group">
-                                            <label class="switch">
-                                                @Html.CheckBoxFor(m => m.VentaExtraordinaria, new { @class = "form-control" })
-                                                <span class="slider round"></span>
-                                            </label>
-                                        </div>
+                                </div>
+                                <div class="col-md-4">
+                                    Autorizar ventas con límite de crédito excedido
+                                    <div class="form-group center">
+                                        <label class="switch">
+                                            @Html.CheckBoxFor(m => m.VentaExtraordinaria, new { @class = "form-control" })
+                                            <span class="slider round"></span>
+                                        </label>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    @*<div class="col-lg-12 col-md-12 col-sm-12">
-                        <div class="card">
-                            <div class="header">
-                                <h2><strong>Condición del crédito y descuento</strong></h2>
-                            </div>
-                            <div class="body">
-                                <div class="row clearfix">
-                                    <div class="col-lg-2 col-md-2 col-sm-2">
-                                        <div class="form-group">
-                                            Límite de crédito:
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-3 col-md-3 col-sm-3">
-                                        <div class="form-group">
-                                            Monto $ <input name="limiteCreditoMonto" type="number" value="@((ViewBag.IdCliente==null)?0:ViewBag.IdCliente[0].limiteCreditoMonto)" />
 
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-3 col-md-3 col-sm-3">
-                                        <div class="form-group">
-                                            <div>
-                                                Días <input name="limiteCreditoDias" type="number" value="@((ViewBag.IdCliente==null)?0:ViewBag.IdCliente[0].limiteCreditoDias)" />
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-3 col-md-3 col-sm-3">
-                                        <div class="form-group">
-                                            <div>
-                                                Descuento $ x kilo:
-                                                <input name="DescuentoXKilo" type="number" value="@((ViewBag.IdCliente[0].DescuentoXKilo==null)?0:ViewBag.IdCliente[0].DescuentoXKilo)" />
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>*@
                 </div>
                 <div class="row clearfix">
                     <div class="col-lg-12 col-md-12 col-sm-12">
