--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_camera.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_camera.xml
@@ -44,21 +44,26 @@
                     android:id="@+id/cPreview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginTop="-140dp"
+                    android:layout_marginBottom="-140dp"
+                    android:layout_marginRight="-45dp"
+                    android:layout_marginLeft="-45dp">
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="top|center"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    >
 
                     <LinearLayout
                         android:layout_width="350dp"
                         android:layout_height="350dp"
                         android:layout_alignParentTop="true"
                         android:layout_marginTop="50dp"
-                        android:background="@drawable/circleblackcamera"
+                        android:background="@drawable/greencircle"
                         android:orientation="horizontal"></LinearLayout>
                 </LinearLayout>
             </RelativeLayout>
