--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -199,37 +199,49 @@
                                 <ul class="ml-menu">
                                     @if (rol.ReporteCuentasXPagar)
                                     {
-                                    <li>@Html.ActionLink("Cuentas por pagar", "CuentasXPagar", "Reportes")</li>}
+                                    <li>@Html.ActionLink("Cuentas por pagar", "CuentasXPagar", "Reportes")</li>
+                                    }
                                     @if (rol.ReportePuntoVenta)
                                     {
-                                    <li>@Html.ActionLink("Inv. Punto de venta", "InventarioXPuntoVenta", "Reportes")</li>}
+                                    <li>@Html.ActionLink("Inv. Punto de venta", "InventarioXPuntoVenta", "Reportes")</li>
+                                    }
                                     @if (rol.ReportePrecioVenta)
                                     {
-                                    <li>@Html.ActionLink("Hst. Precio de venta", "HistoricoPrecioVenta", "Reportes")</li>}
+                                    <li>@Html.ActionLink("Hst. Precio de venta", "HistoricoPrecioVenta", "Reportes")</li>
+                                    }
                                     @if (rol.ReporteCallCenter)
                                     {
-                                    <li>@Html.ActionLink("Call Center", "CallCenter", "Reportes")</li>}
+                                    <li>@Html.ActionLink("Call Center", "CallCenter", "Reportes")</li>
+                                    }
                                     @if (rol.ReporteRequisicion)
                                     {
-                                    <li>@Html.ActionLink("Requisición", "Requisicion", "Reportes")</li>}
+                                    <li>@Html.ActionLink("Requisición", "Requisicion", "Reportes")</li>
+                                    }
                                     @if (rol.ReporteOrdenCompra)
                                     {
-                                    <li>@Html.ActionLink("Ordenes de Compra", "OrdenCompraRep", "Reportes")</li>}
+                                    <li>@Html.ActionLink("Ordenes de Compra", "OrdenCompraRep", "Reportes")</li>
+                                    }
                                     @if (rol.ReporteRendimientoVehicular)
                                     {
-                                    <li>@Html.ActionLink("Rendimiento Vehicular", "RendimientoVehicular", "Reportes")</li>}
+                                    <li>@Html.ActionLink("Rendimiento Vehicular", "RendimientoVehicular", "Reportes")</li>
+                                    }
                                     @if (rol.ReporteRendimientoVehicular)
                                     {
-                                    <li>@Html.ActionLink("Inv. Concepto", "InventarioXConcepto", "Reportes")</li>}
+                                    <li>@Html.ActionLink("Inv. Concepto", "InventarioXConcepto", "Reportes")</li>
+                                    }
                                     @if (rol.ReporteCallCenter)
                                     {
-                                    <li>@Html.ActionLink("Hst. Vs Ventas", "HistoricoVsVentas", "Reportes")</li>}
+                                    <li>@Html.ActionLink("Hst. Vs Ventas", "HistoricoVsVentas", "Reportes")</li>
+                                    }
                                     @if (rol.ReporteCorteCaja)
                                     {
-                                    <li>@Html.ActionLink("Corte de Caja", "CorteCaja", "Reportes")</li>}
+                                    <li>@Html.ActionLink("Corte de Caja", "CorteCaja", "Reportes")</li>
+                                    }
                                     @if (rol.Ventas) //ReporteGastoVehiculo
                                     {
-                                    <li>@Html.ActionLink("Gasto Por Vehiculo", "GastoVehicular", "Reportes")</li>}
+                                    <li>@Html.ActionLink("Gasto Por Vehiculo", "GastoVehicular", "Reportes")</li>
+                                    }
+                                    <li>@Html.ActionLink("Calculo de comisiones", "Comisiones", "Reportes")</li>
                                 </ul>
                             </li>
                         }                       
