JSA - Correcion de ordenamiento de pedidos

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_Pedidos.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_Pedidos.cshtml
@@ -32,6 +32,7 @@
         settings.Columns.Add("NombreRfc", "Solicitante");
         settings.Columns.Add("Cantidad", "Cantidad");
         settings.Columns.Add("EstatusPedido", "Estatus");
+        settings.Columns.Add("FechaRegistroPedido", "Fecha de Pedido");
 
         settings.Columns.Add(c =>
         {
